src/snapshots/fec_receipt__tests__F13A_1910509_full.snap
---
source: src/tests.rs
expression: "preview::text(&receipt, false)"
---
  +--------------------------------+
  |================================|
2x|        F O R M   1 3           |
  | Inaugural Committee Donations  |
  |          FEC-1910509           |
  |        ** AMENDMENT **         |
  |================================|
2x|TRUMP VANCE INAUGURAL COMMITTEE,|
2x|INC.                            |
  |C00894162                       |
  |--------------------------------|
  |Report  90D - Post Inaugural    |
  |Period  Nov 15, 2024 - Apr 20,  |
  |        2025                    |
  |--------------------------------|
  |Signed  BRADLEY T. CRATE        |
  |        Aug 7, 2025             |
  |                                |
  |                                |
  |                                |
  |       [ image 384x148 ]        |
  |                                |
  |                                |
  | scan for the filing on fec.gov |
  |                                |
  |                                |
  |                                |
  |                                |
  +--------------------------------+
