src/snapshots/fec_receipt__tests__F13N_1904840_full.snap
---
source: src/tests.rs
expression: "preview::text(&receipt, false)"
---
  +--------------------------------+
  |================================|
2x|        F O R M   1 3           |
  | Inaugural Committee Donations  |
  |          FEC-1904840           |
  |================================|
2x|TRUMP VANCE INAUGURAL COMMITTEE,|
2x|INC.                            |
  |C00894162                       |
  |--------------------------------|
  |Report  90S - Post Inaugural    |
  |        Supplement              |
  |Period  Apr 21 - Jul 18, 2025   |
  |--------------------------------|
  |Signed  BRADLEY T. CRATE        |
  |        Jul 18, 2025            |
  |                                |
  |                                |
  |                                |
  |       [ image 384x148 ]        |
  |                                |
  |                                |
  | scan for the filing on fec.gov |
  |                                |
  |                                |
  |                                |
  |                                |
  +--------------------------------+
