src/snapshots/fec_receipt__tests__F1MN_1917288.snap
---
source: src/tests.rs
expression: "preview::text(&receipt, false)"
---
  +--------------------------------+
  |================================|
2x|        F O R M   1 M           |
  |     Multicandidate Status      |
  |          FEC-1917288           |
  |================================|
2x|MORE JOBS, LESS GOVERNMENT      |
  |C00693838                       |
  |--------------------------------|
  |--------------------------------|
  |Signed  CHARLES GANTT           |
  |        Oct 2, 2025             |
  |                                |
  |                                |
  |                                |
  |       [ image 384x148 ]        |
  |                                |
  |                                |
  | scan for the filing on fec.gov |
  |                                |
  |                                |
  |                                |
  |                                |
  +--------------------------------+
